# consensource-processor

./: .travis.yml  Cargo.toml  Dockerfile  Dockerfile.sabre  Dockerfile.test  README.md  consensource.yaml
.github/: CONTRIBUTING.md
src/: handler.rs  main.rs  payload.rs  state.rs
src/handler/: agent.rs  assertion.rs  certificate.rs  factory.rs  mod.rs  organization.rs  standard.rs  test_utils.rs
src/transaction_handler/: agent.rs  assertion.rs  certificate.rs  factory.rs  handler.rs  mod.rs  organization.rs  standard.rs
