[package]
name = "consensource-processor"
version = "0.1.0"
description = "A ConsenSource transaction family for Sawtooth"
authors = [ "Target" ]
license = "Apache-2.0"

[dependencies]
clap = "2"
common = { git = "https://github.com/target/consensource-common.git", branch = "master" }
protobuf = "2.8.1"
cfg-if = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sabre-sdk = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sawtooth-sdk = "0.3"
log = "0.4"
log4rs = "0.8"
